# jobflow

./: .gitignore  CLAUDE.md  pyproject.toml
services/resume-service/: .env.example  Dockerfile  README.md  examples.py  pyproject.toml  pytest.ini
services/resume-service/docs/plans/: microservice-conversion.md
services/resume-service/src/: main.py  settings.py
services/resume-service/src/api/: __init__.py  health.py
services/resume-service/src/application/: __init__.py  chunking.py  extraction.py  parse_resume.py
services/resume-service/src/config/: __init__.py  extraction_config.py
services/resume-service/src/coordinators/: __init__.py  resume_extractor.py
services/resume-service/src/domain/: __init__.py  exceptions.py  interfaces.py  models.py
services/resume-service/src/exceptions/: __init__.py  api_exceptions.py  parsing_exceptions.py
services/resume-service/src/extractors/: __init__.py  email_extractor.py  factory.py  skills_extractor.py
services/resume-service/src/framework/: __init__.py  resume_parser_framework.py
services/resume-service/src/infrastructure/: __init__.py
services/resume-service/src/interfaces/: __init__.py  extracting_strategy.py  file_parser.py
services/resume-service/src/models/: __init__.py  resume_data.py
services/resume-service/src/parsers/: pdf_parser.py  word_parser.py
services/resume-service/src/utils/: __init__.py
services/resume-service/tests/unit/: test_domain_and_chunking.py  test_domain_models.py  test_extraction.py  test_grpc_and_mcp.py  test_jobflow_llm_client.py  test_parse_resume_use_case.py
(+95 files in other folders)
