[project]
name = "resume-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.30.0",
    "grpcio>=1.73.0",
    "grpcio-tools>=1.73.0",
    "httpx>=0.28.1",
    "langfuse>=2.60.0",
    "pdfminer.six>=20250506",
    "pydantic>=2.11.0",
    "python-docx>=1.2.0",
    "qdrant-client>=1.14.0",
    "gliner>=0.2.22",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-q", "--strict-markers", "--tb=short", "--disable-warnings"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
